...
  const { tokens } = useTheme();

  return (
    <NativeTabs tintColor={tokens.primary} minimizeBehavior="onScrollDown">
      <NativeTabs.Trigger name="index">
        <Icon sf="house.fill" />
        <Label>Início</Label>
      </NativeTabs.Trigger>

      <NativeTabs.Trigger name="search">
        <Icon sf="magnifyingglass" />
        <Label>Busca</Label>
      </NativeTabs.Trigger>

      <NativeTabs.Trigger name="map">
        <Icon sf="map.fill" />
        <Label>Mapa</Label>
      </NativeTabs.Trigger>
...
